# hockey-django-project

./: Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  setup.cfg
hockey_django_project/: asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
hockey_django_project/locale/ru/LC_MESSAGES/: django.mo  django.po
hockey_django_project/skills/: apps.py  forms.py  models.py  urls.py  views.py
hockey_django_project/skills/migrations/: 0001_initial.py
hockey_django_project/teams/: apps.py  forms.py  models.py  urls.py  views.py
hockey_django_project/teams/migrations/: 0001_initial.py
hockey_django_project/templates/: base.html  index.html  login.html  navbar.html
hockey_django_project/templates/skills/: create.html  delete.html  skills_list.html  update.html
hockey_django_project/templates/teams/: delete.html  teams_list.html  update.html
hockey_django_project/templates/users/: clear_teams_from_players.html  create.html  delete.html  match.html  players_list.html  show_one_user.html  team_add_user.html  team_create.html  users_list.html
hockey_django_project/users/: apps.py  filters.py  forms.py  models.py  urls.py  views.py
hockey_django_project/users/migrations/: 0001_initial.py  0002_alter_user_skill_alter_user_team.py  0002_alter_user_skill_delete_skill.py  0003_user_сontact_information.py  0004_alter_user_skill_alter_user_team_and_more.py
