[tool.poetry]
name = "hockey-django-project"
version = "0.1.0"
description = ""
authors = ["AniutaP <musenok.ko@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
python-dotenv = "^1.0.1"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
django-bootstrap5 = "^23.4"
django-extensions = "^3.2.3"
django-filter = "^23.5"
rollbar = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
